reflect-demo/src/tests/snapshots/reflect_demo__tests__serde__struct_rename_all_pascal_case.snap
---
source: reflect-demo/src/tests/serde.rs
expression: "(TestStructRenameAllPascalCase::reflect_input(),\n    TestStructRenameAllPascalCase::reflect_output())"
---
[
  [
    {
      "name": "reflect_demo::tests::serde::TestStructRenameAllPascalCase"
    },
    {
      "types": [
        {
          "kind": "struct",
          "name": "reflect_demo::tests::serde::TestStructRenameAllPascalCase",
          "fields": [
            {
              "name": "FieldName",
              "type": {
                "name": "u8"
              },
              "required": true
            }
          ]
        },
        {
          "kind": "primitive",
          "name": "u8",
          "description": "8-bit unsigned integer"
        }
      ]
    }
  ],
  [
    {
      "name": "reflect_demo::tests::serde::TestStructRenameAllPascalCase"
    },
    {
      "types": [
        {
          "kind": "struct",
          "name": "reflect_demo::tests::serde::TestStructRenameAllPascalCase",
          "fields": [
            {
              "name": "FieldName",
              "type": {
                "name": "u8"
              },
              "required": true
            }
          ]
        },
        {
          "kind": "primitive",
          "name": "u8",
          "description": "8-bit unsigned integer"
        }
      ]
    }
  ]
]
